try to fix the full screen problem on safari

--- a/Angular2/src/app/pages/training/course/training-course.component.scss
+++ b/Angular2/src/app/pages/training/course/training-course.component.scss
@@ -12,7 +12,6 @@ div.fill {
     left: 0;
     top: 0;
     bottom: 0;
-    width: 20%;
   }
 
   div.right-side {
@@ -20,7 +19,6 @@ div.fill {
     right: 0;
     top: 0;
     bottom: 0;
-    width: 80%;
     background-color: white;
 
     div.content-panel {
